fix errors and add groups on swagger
