# src/controllers/AuthController.ts
@@ -9,13 +9,11 @@ dotenv.config({ path: `${__dirname}/../../.env` });
 
 class AuthController {
   static login = async (req: Request, res: Response) => {
-    //Check if username and password are set
     let { email, password } = req.body;
     if (!(email && password)) {
       res.status(400).send();
     }
 
-    //Get user from database
     const userRepository = getRepository(Users);
     let user: Users;
     try {
@@ -24,34 +22,28 @@ class AuthController {
       res.status(401).send();
     }
 
-    //Check if encrypted password match
     if (!user.checkIfUnencryptedPasswordIsValid(password)) {
       res.status(401).send();
       return;
     }
 
-    //Sing JWT, valid for 1 hour
     const token = jwt.sign(
       { id: user.id, email: user.email },
       process.env.TOKEN,
       { expiresIn: "1h" }
     );
 
-    //Send the jwt in the response
     res.send({ token: token });
   };
 
   static changePassword = async (req: Request, res: Response) => {
-    //Get ID from JWT
     const id = res.locals.jwtPayload.id;
 
-    //Get parameters from the body
     const { oldPassword, newPassword } = req.body;
     if (!(oldPassword && newPassword)) {
       res.status(400).send();
     }
 
-    //Get user from the database
     const userRepository = getRepository(Users);
     let user: Users;
     try {
@@ -60,21 +52,19 @@ class AuthController {
       res.status(401).send();
     }
 
-    //Check if old password matchs
     if (!user.checkIfUnencryptedPasswordIsValid(oldPassword)) {
       res.status(401).send();
       return;
     }
 
-    //Validate de model (password lenght)
     user.password = newPassword;
     const errors = await validate(user);
     if (errors.length > 0) {
       res.status(400).send(errors);
       return;
     }
-    //Hash the new password and save
     user.hashPassword();
+
     userRepository.save(user);
 
     res.status(204).send();
